
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members= [
   "src/aoc2020",
   "src/aoc2022",
]
[workspace.dependencies]
aoc-attributes = {version="0.1.0", path ="src/aoc-attributes"}
itertools = "0.9.0"
nom = "7.1"
structopt = "0.3.21"
anyhow = "1.0.35"
