[package]
name = "aoc2020"
version = "0.1.0"
authors = ["wolf4ood <enrico.risa@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-attributes = { workspace= true}
itertools = { workspace= true}
nom = { workspace= true}
structopt = { workspace= true}
anyhow = { workspace= true}
