[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-attributes = {version="0.1.0", path ="../aoc-attributes"}
itertools = "0.9.0"
nom = "6.0.1"
once_cell = "1.5.2"
structopt = "0.3.21"
anyhow = "1.0.35"
